# FALIZ-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
apps/backend/core/: database.py  redis.py
