[tool.poetry]
name = "faliz-backend"
version = "1.0.0"
description = "FALIZ AI Backend - FastAPI + LangChain orchestration"
authors = ["FALIZ Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6"
pydantic-settings = "^2.1"
sqlalchemy = "^2.0"
alembic = "^1.13"
asyncpg = "^0.29"
redis = {extras = ["hiredis"], version = "^5.0"}
aioredis = "^2.0"
celery = "^5.3"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.0.30"
chromadb = "^0.4.0"
openai = "^1.14"
anthropic = "^0.26"
numpy = "^1.24"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.6"
email-validator = "^2.1"
httpx = "^0.26"
requests = "^2.31"
websockets = "^12.0"
python-dotenv = "^1.0"
structlog = "^24.1"
slow-api = "^0.1.9"
cryptography = "^41.0"
PyAudio = "^0.2.13"
sounddevice = "^0.4.6"
whisper-cpp = "^0.1.5"
silero-vad = "^0.3.9"
elevenlabs = "^0.2.26"
spotify-client = "^0.1.0"
Google-auth-oauthlib = "^1.2"
google-auth-httplib2 = "^0.2"
google-api-python-client = "^2.100"
WolframAlphaAPI = "^0.2.0"
requests-oauthlib = "^1.3"
pydantic-extra-types = "^2.4"
python-json-logger = "^2.0"
apscheduler = "^3.10"
scikit-image = "^0.22"
deepface = "^0.0.75"
Pillow = "^10.1"
ffmpeg-python = "^0.2.1"
yt-dlp = "^2024.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^24.1"
isort = "^5.13"
mypy = "^1.8"
pylint = "^3.0"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
